src/qbert_py_laserfollow/log/build_2023-03-22_14-06-49/qbert_py_laserfollow/stderr.log
/usr/lib/python3/dist-packages/setuptools/command/install.py:34: SetuptoolsDeprecationWarning: setup.py install is deprecated. Use build and pip and other standards-based tools.
  warnings.warn(
  File "/home/johnma/ros2_ws/src/qbert_py_laserfollow/install/qbert_py_laserfollow/lib/python3.10/site-packages/qbert_py_laserfollow/laserfollow.py", line 41
    print(f"{ranges[0]} - {ranges[20]} - {ranges[40]} - {ranges[60]} - {ranges[80]}"}
                                                                                    ^
SyntaxError: closing parenthesis '}' does not match opening parenthesis '('

